kube/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-frontend-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ip-frontend
