kube/api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
spec:
  hosts:
  - "*"
  gateways:
  - ip-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: api
        port:
          number: 80
