kube/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - api.minerstat.com
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-minerstat
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: minerstat
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-minerstat-through-egress-gateway
spec:
  hosts:
  - api.minerstat.com
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - api.minerstat.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: minerstat
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - api.minerstat.com
    route:
    - destination:
        host: api.minerstat.com
        port:
          number: 443
      weight: 100
