kube/front-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-vs
spec:
  hosts:
  - "*"
  gateways:
  - ip-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ip-frontend-svc
        port:
          name: http
