kube/service-entry-minerstat.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: newsdata
spec:
  hosts:
  - newsdata.io
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
